ServicesAndNetworking/testNetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: my-nginx
  name: nginxtest
spec:
  containers:
  - image: nginx:latest
    name: nginxtest
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
