ServicesAndNetworking/networkpolicysample.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sk-network-policy
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
